--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     -->
     <% if (process.env.NODE_ENV === 'production') { %>
     <!-- Start of Async Drift Code -->
-    <script>
+    <script async defer>
       'use strict';
 
       !(function () {
