feat(public/index.html): adds meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,18 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#ff5252" />
     <meta
       name="description"
+      content="Enables entrepreneurs to quickly and easily validate their startup idea and obtain an initial following."
+    />
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:url" content="%PUBLIC_URL%" />
+    <meta property="og:type" content="app" />
+    <meta property="og:title" content="Idea Sprout" />
+    <meta
+      property="og:description"
       content="Enables entrepreneurs to quickly and easily validate their startup idea and obtain an initial following."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
