fix(public/index.html): adds crossorigin to preconnect link

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="preconnect" href="https://presence.api.drift.com" />
+    <link
+      rel="preconnect"
+      href="https://presence.api.drift.com"
+      crossorigin="anonymous"
+    />
     <title>Idea Sprout</title>
   </head>
   <body>
