fix(public/index.html): adds twitter:image

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Enables entrepreneurs to quickly and easily validate their startup idea and obtain an initial following."
     />
     <meta name="twitter:card" content="summary" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo192.png" />
     <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
     <meta property="og:url" content="%PUBLIC_URL%" />
     <meta property="og:type" content="app" />
